REGRESSION(311577@main): [GTK][GStreamer][Rice] WebKitNetworkProcess is using massive amounts of CPU and spanning several threads named webrtc-rice-XX https://bugs.webkit.org/show_bug.cgi?id=313710

Reviewed by Xabier Rodriguez-Calvar.

Un-register TCP and UDP sockets from the librice I/O registry when destroying the backend. The recv
GSource was also prone to infinite looping due to missing RICE_IO_RECV_CLOSED notifications from
rice-io and infinite blocking on rice_sockets_recv() due to lack of configured timeout on the
sockets.

* Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.cpp:
(WebKit::RiceBackend::~RiceBackend):
(WebKit::RiceBackend::finalizeStream):
(WebKit::RiceBackend::allocateSocket):
(WebKit::RiceBackend::removeSocket):
* Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.h:

Canonical link: https://commits.webkit.org/313309@main