Source/WebKit/NetworkProcess/webrtc/rice/RiceBackend.h
@@ -108,15 +108,17 @@ private:
 
     RefPtr<RunLoop> m_runLoop;
 
-    void configureSocketBufferSizes();
+    void configureSockets();
 
     struct SocketData {
         GRefPtr<RiceSockets> sockets;
         GRefPtr<GSource> source;
     };
-    HashMap<unsigned, SocketData, WTF::IntHash<unsigned>, WTF::UnsignedWithZeroKeyHashTraits<unsigned>> m_sockets;
+    Lock m_socketsLock;
+    HashMap<unsigned, SocketData, WTF::IntHash<unsigned>, WTF::UnsignedWithZeroKeyHashTraits<unsigned>> m_sockets WTF_GUARDED_BY_LOCK(m_socketsLock);
 
     HashMap<unsigned, Vector<GUniquePtr<RiceAddress>>, WTF::IntHash<unsigned>, WTF::UnsignedWithZeroKeyHashTraits<unsigned>> m_udpAddresses;
+    HashMap<unsigned, Vector<std::pair<String, String>>, WTF::IntHash<unsigned>, WTF::UnsignedWithZeroKeyHashTraits<unsigned>> m_tcpAddresses;
     Vector<GRefPtr<RiceTcpListener>> m_tcpListeners;
 
     HashMap<String, GUniquePtr<RiceAddress>> m_addressCache;
